fixed overflow on My Calculations and added dispatches for initial state

--- a/src/CarbideNG/src/app/calculation-list/calculation-list.component.scss
+++ b/src/CarbideNG/src/app/calculation-list/calculation-list.component.scss
@@ -1,21 +1,27 @@
 :host {
-    margin: 12px 0 0 36px;
+    display: block;
+    box-sizing: border-box;
+    padding: 40px 0 0 40px;
 
-    button {
+    .add-calc {
         font-size: 1.8rem;
         margin-top: 8px;
         opacity: 0.5;
     }
-
-    h1 {
-        font-size: 3.2rem;
-        font-weight: 400;
-    }    
 
     .header {
         align-items: center;
         display: grid;
         grid-template-columns: 1fr auto 36px;
         grid-template-rows: 1fr;
+
+        button {
+            width: 40px;
+        }
+
+        span {
+            font-size: 3.2rem;
+            font-weight: 400;
+        }    
     }
 }
